--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
