--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "voyage-design-system",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.1.1",
   "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "local-sb-start": "storybook dev -p 6006",
+    "dev-sb-build": "storybook build --output-dir storybook-static/dev",
+    "prod-sb-build": "storybook build --output-dir storybook-static/prod --loglevel error",
+    "publish-build": "vite build && tsc -p tsconfig.app.json --emitDeclarationOnly",
+
     "check": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --max-warnings=0 && prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\"",
     "fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\" && eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix"
   },
@@ -15,18 +24,21 @@
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
-    "@tailwindcss/vite": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "tailwindcss": "^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.26.0",
     "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/vite": "^4.1.7",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-onboarding": "^8.6.12",
     "@storybook/blocks": "^8.6.12",
@@ -39,8 +51,7 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.4.1",
-    "@vitest/browser": "^3.1.3",
-    "@vitest/coverage-v8": "^3.1.3",
+
     "autoprefixer": "^10.4.21",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
@@ -49,7 +60,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.1.0",
-    "playwright": "^1.52.0",
+
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "storybook": "^8.6.12",
@@ -57,8 +68,7 @@
     "tw-animate-css": "^1.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5",
-    "vitest": "^3.1.3"
+    "vite": "^6.3.5"
   },
   "eslintConfig": {
     "extends": [
