--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss": "^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.26.0",
     "@shadcn/ui": "^0.0.4",
