--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "dist"
   ],
   "scripts": {
-    "start:local-sb": "storybook dev -p 6006",
-    "build:dev-sb": "storybook build --output-dir storybook-static/dev",
-    "build:prod-sb": "storybook build --output-dir storybook-static/prod --loglevel error",
     "build:publish": "vite build && tsc -p tsconfig.app.json --emitDeclarationOnly",
     "check": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --max-warnings=0 && prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\"",
     "fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\" && eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix"
@@ -36,16 +33,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
-    "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.26.0",
     "@shadcn/ui": "^0.0.4",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-onboarding": "^8.6.12",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/experimental-addon-test": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
-    "@storybook/test": "^8.6.12",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
     "@types/node": "^22.15.17",
@@ -58,20 +47,14 @@
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.1.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "storybook": "^8.6.12",
     "tailwindcss": "^4.1.7",
     "tw-animate-css": "^1.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
