--- a/package.json
+++ b/package.json
@@ -6,20 +6,33 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./styles": "./dist/voyage-design-system.css",
+    "./dist/voyage-design-system.css": "./dist/voyage-design-system.css"
+  },
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "sideEffects": [
+    "**/*.css",
+    "./src/index.css",
+    "./dist/voyage-design-system.css"
   ],
   "scripts": {
     "build:publish": "vite build && tsc -p tsconfig.app.json --emitDeclarationOnly",
+    "build:analyze": "vite build --mode analyze",
     "check": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --max-warnings=0 && prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\"",
-    "fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\" && eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix"
+    "fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\" && eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.10",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-separator": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-tabs": "^1.1.11",
     "@toast-ui/editor": "^3.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,19 +40,18 @@
     "tailwind-merge": "^3.3.0"
   },
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "tailwindcss": "^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "@eslint/js": "^9.26.0",
-    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
     "@types/node": "^22.15.17",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.26.0",
@@ -51,10 +63,32 @@
     "globals": "^16.1.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^4.1.7",
-    "tw-animate-css": "^1.3.0",
+    "terser": "^5.43.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5"
+  },
+  "keywords": [
+    "react",
+    "typescript",
+    "ui-components",
+    "design-system",
+    "tailwindcss",
+    "component-library"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/voyage-design-system"
+  },
+  "bugs": {
+    "url": "https://github.com/your-org/voyage-design-system/issues"
+  },
+  "homepage": "https://github.com/your-org/voyage-design-system#readme",
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
