--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES2022",
+    "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "module": "ES2022",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ES2020",
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -14,26 +14,46 @@
     "moduleDetection": "force",
     "noEmit": false,
     "declaration": true,
+    "declarationMap": true,
     "declarationDir": "./dist",
     "emitDeclarationOnly": true,
     "outDir": "./dist",
     "jsx": "react-jsx",
 
     /* Linting */
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": true,
+    "strict": true,
+    "exactOptionalPropertyTypes": false,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": false,
+    "noUncheckedIndexedAccess": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
 
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    /* Additional options for library */
+    "removeComments": false,
+    "preserveConstEnums": true,
+    "sourceMap": false,
+    "inlineSources": false,
+    "stripInternal": true
   },
   "include": ["src"],
-  "exclude": ["**/*.stories.tsx", "**/*.stories.ts"]
+  "exclude": [
+    "**/*.stories.tsx",
+    "**/*.stories.ts",
+    "**/*.test.tsx",
+    "**/*.test.ts",
+    "**/*.spec.tsx",
+    "**/*.spec.ts",
+    "node_modules",
+    "dist"
+  ]
 }
