--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "https://github.com/benoky/voyage-design-system.git" }],
+  "changelog": ["@changesets/changelog-github", { "repo": "benoky/voyage-design-system" }],
   "commit": true,
   "fixed": [],
   "linked": [],
