--- a/package.json
+++ b/package.json
@@ -28,7 +28,14 @@
   "scripts": {
     "build:publish": "vite build && tsc -p tsconfig.app.json --emitDeclarationOnly",
     "check": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --max-warnings=0 && prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\"",
-    "fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\" && eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix"
+    "fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\" && eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
+    "changeset:add": "changeset add",
+    "changeset:version": "changeset version",
+    "changeset:status": "changeset status",
+    "changeset:publish": "changeset publish",
+    "release": "npm run check && npm run build:publish && changeset publish",
+    "release:full": "changeset version && npm run check && npm run build:publish && changeset publish",
+    "release:preview": "npm run check && npm run build:publish && changeset publish --dry-run"
   },
   "dependencies": {
     "@toast-ui/editor": "^3.2.2",
@@ -43,6 +50,7 @@
     "tailwindcss": "^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.5",
     "@eslint/js": "^9.26.0",
     "@tailwindcss/postcss": "^4.1.7",
