--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.7",
     "terser": "^5.43.1",
+    "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5"
